@@ -16,7 +16,6 @@ import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
@@ -43,7 +42,7 @@ public class CourseServiceImpl implements CourseService {
 
     @Override
     @Transactional
-    // Todo 코스 생성시 교육기관 정보도 들어가도록 수정필요
+    // Todo 코스 생성시 교육기관 정보도 들어가도록 수정필요 -> 수정 완료
     public Long create(UserDetails userDetails, CourseCreateRequestDto requestDto) {
         return courseRepository.save(requestDto.toEntity()).getId();
     }
@@ -52,10 +51,10 @@ public class CourseServiceImpl implements CourseService {
     @Transactional
     public boolean update(UserDetails userDetails, long id, CourseCreateRequestDto requestDto) {
         Course course = courseRepository.findById(id).orElse(null);
-        // Todo 코스 업데이트시 교육기관 매니저만 수정가능하도록 권한 확인 해야함 (아래 주석 참고)
-//        if (course == null || !course.getTutor().equals(userService.getAuth(userDetails))) {
-//            return false;
-//        }
+        // Todo 코스 업데이트시 교육기관 매니저만 수정가능하도록 권한 확인 해야함 (아래 주석 참고) -> 수정 완료
+        if (course == null || !course.getInstitution().getId().equals(userService.getAuth(userDetails).getId())) {
+            return false;
+        }
         courseRepository.save(course.patch(requestDto));
         return true;
     }
@@ -64,29 +63,32 @@ public class CourseServiceImpl implements CourseService {
     @Transactional
     public boolean delete(UserDetails userDetails, long id) {
         Course course = courseRepository.findById(id).orElse(null);
-        // Todo 코스 삭제시 교육기관 매니저만 삭제가능하도록 권한 확인 해야함 (아래 주석 참고)
-//        if (course == null || !course.getTutor().equals(userService.getAuth(userDetails))) {
-//            return false;
-//        }
+        // Todo 코스 삭제시 교육기관 매니저만 삭제가능하도록 권한 확인 해야함 (아래 주석 참고) -> 수정 완료
+        if (course == null || !course.getInstitution().getId().equals(userService.getAuth(userDetails).getId())) {
+            return false;
+        }
         courseRepository.save(course.setState(CourseState.REMOVED));
         return true;
     }
 
+    // 교육기관 매니저가 교육기관 코스들의 목록 조회
     @Override
-    public List<CourseListResponseDto> getList(UserDetails userDetails) {
+    public List<CourseListResponseDto> getListByInstitution(UserDetails userDetails) {
         User user = userService.getAuth(userDetails);
-        List<Course> courseList = new ArrayList<>();
-        // Todo 코스 리스트 받아올 때 강사의 리스트가 아닌, 매니저에 대해 해당 교육기관의 모든 코스 찾아오도록 수정해야함
-        if ( true
-//                user.isTutorState()
-        ){
-//            courseList = courseRepository.findAllByTutor(user);
-        }else {
-//            courseList = courseRepository.findAllByEnrollments_User(user);
-        }
+        Long institutionId = user.getManager().getInstitution().getId();
+
+        List<Course> courseList = courseRepository.findByInstitution_Id(institutionId);
+
+
         return courseList.stream()
-                .map(CourseListResponseDto::from)
-                .toList();
+                .map(course -> new CourseListResponseDto(
+                        course.getId(),
+                        course.getTitle(),
+                        course.getIntroduction(),
+                        course.getInstructor(),
+                        course.getState(),
+                        course.getCategory()
+                )).collect(Collectors.toList());
     }
 
     @Override
@@ -122,7 +124,7 @@ public class CourseServiceImpl implements CourseService {
 
         return enrollments.stream()
                 .filter(Objects::nonNull)
-                .map(enrollment -> EmployeeCourseListResponseDto.from(enrollment.getCourseProvide().getCourse(),enrollment.getCourseProvide()))
+                .map(enrollment -> EmployeeCourseListResponseDto.from(enrollment.getCourseProvide().getCourse(), enrollment.getCourseProvide()))
                 .collect(Collectors.toList());
     }
 }
